# technical-challenge

go/candlehandles.co.uk/listmanager/: go.mod  list.go  list_test.go  reporting.go  reporting_test.go
python/: README.md  TODO  pyproject.toml
python/listmanager/: __main__.py  listmanager.py
python/tests/: test_giftlist.py
