[tool.poetry]
name = "listmanager"
version = "0.1.0"
description = ""
authors = ["Charlie Wheeler-Robinson"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
rope = "^0.17.0"
click_log = "^0.3.2"
jsonpickle = "^1.4.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pylint = "^2.6.0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
